# nQueens

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: devcontainer.md
src/: CMakeLists.txt  ChromosomePrinter.cpp  ChromosomePrinter.h  chromosome.h  config.h  main.cpp
